// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Score /> adds a valid attempt 1`] = `
<Score
  attempts={
    Immutable.List [
      Immutable.Map {
        "word": "someword",
        "score": "8",
      },
    ]
  }
>
  <styled.div>
    <div
      className="sc-bdVaJa eJrItC"
    >
      <styled.header>
        <header
          className="sc-bwzfXH cIaGHc"
        >
          <h2>
            Score: 
          </h2>
        </header>
      </styled.header>
      <styled.section>
        <section
          className="sc-htpNat bbFALC"
        >
          <styled.table>
            <table
              className="sc-bxivhb cYLiMQ"
            >
              <tbody>
                <Attempt
                  attempt={
                    Immutable.Map {
                      "word": "someword",
                      "score": "8",
                    }
                  }
                  key="0"
                >
                  <tr>
                    <styled.td>
                      <td
                        className="sc-ifAKCX fSZhoQ"
                      >
                        someword
                      </td>
                    </styled.td>
                    <styled.td>
                      <td
                        className="sc-ifAKCX fSZhoQ"
                      >
                        8
                      </td>
                    </styled.td>
                  </tr>
                </Attempt>
              </tbody>
            </table>
          </styled.table>
        </section>
      </styled.section>
    </div>
  </styled.div>
</Score>
`;

exports[`<Score /> adds an invalid attempt 1`] = `
<Score
  attempts={
    Immutable.List [
      Immutable.Map {
        "word": "someword",
        "score": "✘",
      },
    ]
  }
>
  <styled.div>
    <div
      className="sc-bdVaJa eJrItC"
    >
      <styled.header>
        <header
          className="sc-bwzfXH cIaGHc"
        >
          <h2>
            Score: 
          </h2>
        </header>
      </styled.header>
      <styled.section>
        <section
          className="sc-htpNat bbFALC"
        >
          <styled.table>
            <table
              className="sc-bxivhb cYLiMQ"
            >
              <tbody>
                <Attempt
                  attempt={
                    Immutable.Map {
                      "word": "someword",
                      "score": "✘",
                    }
                  }
                  key="0"
                >
                  <tr>
                    <styled.td>
                      <td
                        className="sc-ifAKCX fSZhoQ"
                      >
                        someword
                      </td>
                    </styled.td>
                    <styled.td>
                      <td
                        className="sc-ifAKCX fSZhoQ"
                      >
                        ✘
                      </td>
                    </styled.td>
                  </tr>
                </Attempt>
              </tbody>
            </table>
          </styled.table>
        </section>
      </styled.section>
    </div>
  </styled.div>
</Score>
`;

exports[`<Score /> shows the score 1`] = `
<Score
  attempts={Immutable.List []}
  counter={8}
>
  <styled.div>
    <div
      className="sc-bdVaJa eJrItC"
    >
      <styled.header>
        <header
          className="sc-bwzfXH cIaGHc"
        >
          <h2>
            Score: 
            8
          </h2>
        </header>
      </styled.header>
      <styled.section>
        <section
          className="sc-htpNat bbFALC"
        >
          <styled.table>
            <table
              className="sc-bxivhb cYLiMQ"
            >
              <tbody>
                <undefined />
              </tbody>
            </table>
          </styled.table>
        </section>
      </styled.section>
    </div>
  </styled.div>
</Score>
`;
